<resources>
    <string name="app_name">SellFish</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="welcome">Bienvenido a Sellfish</string>
    <string name="menu">Aquí encontrará las herramientas que ofrecemos</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="add_name">Agregar Población</string>
    <string name="list_name">Listado de Poblaciones</string>
    <string name="guardar">Guardar</string>
    <string name="dismiss">Ok</string>
    <string name="resultado">Resultado</string>
    <string name="editar">Editar</string>
    <string name="eliminar">Eliminar</string>
    <string name="agregar_muestro">Registrar Muestra</string>
    <string name="accion">Acción</string>
    <string name="cancelar">Cancelar</string>
    <string name="add_photo">Agregar Foto</string>
    <string name="title_activity_muestras">Muestras por Población</string>
    <string name="kpi_name">Indicadores</string>
    <string name="send_sms">Enviar SMS</string>
    <string name="title_activity_login">SellFish</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="sign_out">Signout</string>
    <string name="title_activity_measure">MeasureActivity</string>
    <string name="input_hint_units">Output unit</string>
    <string name="action_cleanStorage">Delete stored photos</string>
    <string name="input_hint">Reference length and unit</string>
    <string name="setReferencePoints">Select reference points</string>
    <string name="setMeasurePoints">Select measurement points</string>
    <string name="setScaleValue">Enter the reference length and press OK</string>
    <string name="setPicture">Take a photo</string>
    <string name="btn_clear">Clear</string>
    <string name="error_noPoints">Please tap on the screen to select the points</string>
    <string name="error_noScale">Please enter the scale value</string>
    <string name="error_numberFormat">Please enter a decimal number</string>
    <string name="result_lbl">Length: </string>
    <string name="btn_takePicture">Take Picture</string>
    <string name="action_choosePhoto">Choose existing photo</string>
    <string name="storageDeleted">Photos deleted</string>
    <string name="btn_selectScale">Select scale</string>
    <string name="title_activity_settings">SettingsActivity</string>
    <string name="btn_OK">OK</string>
    <string name="btn_cancel">Cancel</string>
    <string name="analizar">Analizar</string>
    <string name="limpiar">Limpiar Lineas</string>
    <string name="accept">Aceptar</string>
    <string name="grabaciones">Grabaciones</string>
    <string name="title_activity_gestures">Acciones por gesto</string>
    <string name="gestures">Bienvenido usuario, has descubierto nuestro botón mágico para los gestos de la aplicación, intenta utilizar gestos como el doble click para dirigirte a secciones de la aplicación</string>
</resources>
